<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:visibility="gone"
        android:id="@+id/button1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="zoomBack"
        android:text="@string/zoomBack"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <Button
        android:visibility="gone"
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="right"
        android:text="@string/right"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <Button
        android:visibility="gone"
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="fade"
        android:text="@string/fade"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <Button
        android:visibility="gone"
        android:id="@+id/button4"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="back"
        android:text="@string/bydefaultback"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <TextView
        android:text="Pantalla Principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2"
        android:fontFamily="monospace"
        android:textStyle="normal|bold"
        android:textSize="24sp" />

</RelativeLayout>