<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/universal_margin">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:theme="@style/WhiteProgress"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/universal_margin"
                    android:layout_marginTop="@dimen/universal_margin"
                    android:gravity="center"
                    android:text="@string/iniciar_sesion"
                    android:textColor="@color/blanco" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/float_label_user_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/LoginTextField"
                            app:errorEnabled="true">

                            <EditText
                                android:id="@+id/et_usuario"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/usuario"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:textColor="@color/blanco"
                                android:textColorHint="@color/blanco_2"
                                android:textSize="15sp" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/float_label_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/blanco"
                            android:theme="@style/LoginTextField"
                            app:errorEnabled="true"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/et_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:ems="10"
                                android:hint="@string/password"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:textColor="@color/blanco"
                                android:textColorHint="@color/blanco_2"
                                android:textSize="15sp" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_boton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_iniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_selector_general_bg1_bg3"
                android:text="@string/continuar"
                android:textColor="@color/textColor_1" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>
